Started the course again

--- a/site/index.html
+++ b/site/index.html
@@ -5,5 +5,6 @@
     </head>
     <body>
         <h1>Hello Coursera! It's a great learning experience!</h1>
+        <p>I'm currently enrolled in a Coursera certificate in order to learn HTML, CSS and Java script. <br/>I'm enjoying it very much!</p>
     </body>
 </html>
